--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,272 +1,230 @@
-/*Title Formatting*/
-h1 {
-	font-family: 'Georgia', Times, "Times New Roman", serif;
-	color: #4aaaa5;
-	font-size: 20px;
-	font-weight: bold;
-	padding: 20px;
-	border-bottom-color: #dddddd;
-	border-bottom-width: 2px;
-	border-bottom-style: solid;
+* {
+	box-sizing: border-box;
 }
 
-/*Navigation Buttons*/
-.nav {
-	position:relative;
-	padding-left:10px;
-	padding-right: 10px;
-	border-left: 1px solid #cccccc;
-	padding-top: 15px;
-	padding-bottom: 20px;
-	float: right;
-	font-color: #dddddd;
-	background-color: #ffffff;
-	text-align: right;
-}
-
-.nav_border {
-	border: 1px solid black;
-	border-height: 10px;
-}
-
-.nav:hover {
-	background-color: #4aaaa5;
-}
-
-
-
-/*Navigation Bar*/
-header {
-	clear: both;
-	font-weight: bold;
-	margin-top: 10px;
-	background-color: #ffffff;
-	border-color: #cccccc;
-	border-bottom-width: 5px;
-	border-bottom-style: solid;
-	border-bottom-color: #dddddd;
-}
-
-/*About Me Content Box*/
-#aboutme	{
-		position: relative;
-		top: 0;
-		left: 0;
-		border-bottom-style: solid;
-		border-bottom-color: #cccccc;
-		bottom-border-width: 10px;	
-}
-
-/*About Me' page image*/
-.image {
-	float: left;
-	margin-top: 15px;
-	margin-right: 10px;
-	margin-bottom: 10px;
-}
-
-/*Background Image*/
 body {
-	clear: both;
-	background-image: url(../images/gray_sand_@2X.png);
-	border-color: #dddddd;
+	background: url(../images/gray_sand_@2X.png);
+	font-size: 18px;
+	line-height: 34px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: #777;
 }
 
-image {
-	width:270px;
-	height:200px;
+.container { 
+	width: 100%;
+	max-width: 960px;
+	margin: 0 auto;
+	clear: both;
+}
+
+h1, h2, h3, p {
+	margin-bottom: 20px;
+}
+
+p:last-child {
+	margin-bottom: 0;
+}
+
+h1, h2, h3 {
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-weight: 700;
+	color: #4aaaa5;
+}
+
+h1 {
+	font-size: 30px;
+	line-height: 49px;
+	border-bottom: 3px solid #ddd;
+	padding-bottom: 20px;
+}
+
+h2, h3 {
+	font-size: 22px;
+}
+/*title bar*/
+#masthead {
+	background: #fff;
+	margin: 0 0 30px;
+	z-index: 99;
+	color: #fff;
+	overflow: auto;
+	border-bottom: 2px solid #ccc;
+	position: fixed;
+	width: 100%;
 }
 
 /*Title Bar Name Properties*/
-#name {
-	position: relative;
-	left: 60px;
-	background-color: #4aaaa5;
-	width: 150px;
-	padding-top: 15px;
-	padding-bottom: 15px;
-	color: white;
-	font-size: 20px;
-	text-align: center;
-}
-
-.content {
-	/*padding-left: 20px;*/
-	padding-right: 20px;
-	margin-bottom: 20px;
-	background-color: #ffffff;
-	width: 650px;
-	height: 500px;
-	position: relative;
-	top: 40px;
-	left: 40px;
-	overflow: scroll;
-}
-
-.content2 {
-	padding-left: 20px;
-	padding-right: 20px;
-	margin-bottom: 20px;
-	background-color: #ffffff;
-	width: 650px;
-	height: auto;
-	position: relative;
-	top: 40px;
-	left: 40px;
-}
-p {
-	color: #777777;
-	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	font-size: 18px;
-	line-height: 25px;
-	padding: 20px;
-}
-
-/*Portfolio Images*/
-.gallery {
-	display: inline-block;
-	position: relative;
-	margin: 10px;
-	margin-left: 25px;
+#logo {
+	width: 250px;
+	height: 90px;
+	background: #4aaaa5;
 	float: left;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	text-align: center;
+	line-height: 90px;
+	color: #fff;
+	font-weight: 700;
+	font-size: 30px;
+	text-decoration: none;
 }
 
-/*Portfolio Image Descriptions*/
-.desc {
+/*nav buttons*/
+nav {
+	float: right;
+	margin-top: 25px;
+}
+
+nav a {
+	color: #999;
+	text-decoration: none;
+	margin-left: 15px;
+	display: inline-block;
+	border-left: 1px solid #efefef;
+	padding-left: 15px;
+	line-height: 18px;
+}
+
+nav a:first-child {
+	border-left: 0 none;
+}
+
+/*main* body*/
+#main-container {
+	padding-top: 130px;
+}
+
+.main-section {
+	background: #fff;
+	padding: 30px;
+	margin: 0 0 40px 0;
+	width: 100%;
+	max-width: 650px;
+	float: left;
+	border: 1px solid #ddd;
+}
+
+.auth-image {
+	width: 200px;
+	height: auto;
+	margin-top: 10px;
+	float: left;
+	margin-right: 25px;
+}
+
+/*sidebar*/
+.sidebar {
+	background: #fff;
+	padding: 30px;
+	width: 100%;
+	max-width: 270px;
+	float: right;
+	border: 10px solid #ddd;
+	margin-bottom: 20px;
+}
+
+h3, .sidebar, h2 {
+	border-bottom: 2px solid #eee;
+	padding-bottom: 20px:
+	margin-bottom: 15px;
+	line-height: 22px;
+}
+
+.social {
+	width: 62px;
+	height: 62px;
+	margin-top: 8px;
+	margin-right: 5px;
+}
+
+.social:last-child {
+	margin-right: 0;
+}
+
+/*footer*/
+footer {
+	background: #666;
+	color: #fff;
+	padding: 30px 0;
 	clear: both;
+	border-top: 8px solid #4aaaa5;
+	color: #ccc;
+	font-size: 12px;
+	text-align: center;
+	 position:fixed;
+   left:0px;
+   bottom:0px;
+   width: 100%;
+}
+
+/*portfolio*/
+.work {
+	width: 247px;
+	overflow: auto;
+	position: relative;
+	float: left;
+	margin: 20px 0 25px;
+}
+
+.work:nth-child(even) {
+	margin-right: 40px;
+}
+
+ .work img {
+ 	width: 100%;
+ 	border: 0 none;
+ 	opacity: .8;
+ }
+
+.work h3 {
+	border-bottom: 0;
+	background: #4aaaa5;
+	color: #fff;
+	text-align: center;
 	position: absolute;
 	bottom: 20px;
-	left: 10px;
-	text-align: center;
-	background-color: #4aaaa5;
-	width: 270px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-	color: white;
-}
-
-/*Photo Section Background*/
-.photo_section {
-	background-color: #ffffff;	
-}
-
-
-/*Clearfix to size portfolio background*/
-.clearfix:after { content: "\00A0"; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;}
-.clearfix{ display: inline-block;}
-html[xmlns] .clearfix { display: block;}
-* html .clearfix{ height: 1%;}
-.clearfix {display: block}
-
-/*Social Media Box*/
-#social_links {
-	background-color: #ffffff;
-	padding-left: 20px;
-	padding-right: 20px;
-	width: 230px;
-	height: 200px;
-	position: absolute;
-	top: 105px;
-	right: 195px;
-}
-
-/*Social Icon Spacing*/
-img {
-	margin-top: 10px;
-	margin-left: 10px;
-}
-
-form {
-	padding: 20px;
-}
-
-footer {
-	position: fixed;
-	bottom: 0;
+	padding: 15px;
 	width: 100%;
-	padding: 30px;
-	font-size: 10px;
-	text-align: center;
-	color: #ffffff;
-	background-color: #666666;
-	border-top-style: solid;
-	border-top-width: 10px;
-	border-color: #4aaaa5;
+	line-height: 30px;
+	margin-bottom: 0;
+	font-weight: 300;
+}
+
+#contact-form ul {
+	margin-bottom: 20px;
+}
+
+#contact-form li {
+	margin-bottom: 10px
+}
+
+label,
+input[type=text],
+input[type=email],
+textarea {
+	display: block;
+	width: 100%;
 }
 
 
-@media screen and (max-width: 980px) { 
-	.content {
-	width: 415px;
-	height: 800px;
-	}
-
-	.content2 {
-		width: 310px;
-		padding: 10px;
-	}
-
-	.gallery {
-		display: block;
-		margin: 10px;
-	}
-	
-	#social_links {
-	right: 100px;
-	}
+input[type=text],
+input[type=email],
+textarea {
+	height: 35px;
+	border: 1px solid #ddd;
+	padding: 0 10px;
+	font-size: 14px;
 }
 
-@media screen and (max-width: 768px) { 
-	.content {
-	margin: 10 10 10 10;
-	}
-
-	.content2 {
-		width: 90%;
-		margin: 10px;
-	}
-
-	.gallery {
-		width:150px;
-	}
-
-	img {
-		width: 200px;
-		height: 175px;
-	}
-
-	#social_links {
-	width: 280px;
+textarea {
 	height: 200px;
-	left: 40px;
-	top: 525px;
-	}
 }
 
-@media screen and (max-width: 640px) { 
-	header {
-	position: static;
-	margin-top:0;
-	}
-
-	.nav {	
-		position:static;
-	padding-left:10px;
-	padding-right: 10px;
-	border-left: 1px solid #cccccc;
-	padding-top: 40px;
-	padding-bottom: 10px;
-	text-align: center;
-	}
-
-	#name {
-		width: 100%;
-		position: relative;
-		padding: 0 0 0 0 ;
-	}
-
-	.content {
-	margin: 10 10 10 10;
-	}
+input[type=submit] {
+	background: #4aaaa5;
+	border: 0 none;
+	color: #fff;
+	font-size: 18px;
+	padding: 10px 30px;
+	cursor: pointer;
 }
 
